--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sabo_Milky</title>
     <link href="https://fonts.googleapis.com/css2? family=Poppins:wght@400%;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="./media.css">
 </head>
 
 <body>
